# multimodal-knowledge-engine

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  compiled-library-export-proof.yml  consumer-source-pack-proof.yml
benchmarks/audio/: dependency-artifacts.json
benchmarks/ocr/: candidate-environments.json  model-artifacts.json  phase0-scorecard.json  provider-startup.json
benchmarks/retrieval/: cjk-active-scan-qwen3-rrf-v1-comparison.json  cjk-active-scan-qwen3-rrf-v1-development-freeze.json  cjk-relevance-gate-reranker-v1-comparison.json  cjk-relevance-gate-reranker-v1-development-freeze.json  cjk-relevance-gate-reranker-v1-holdout-receipt.json  cjk-trigram-overlap-v1-comparison.json  numeric-grouping-v1-comparison.json  qwen3-embedding-0.6b-compatibility.json  qwen3-embedding-0.6b-development-miss-audit.json  qwen3-embedding-0.6b-exact-v1-comparison.json  qwen3-embedding-0.6b-exact-v1-development-freeze.json  (+3 more)
docs/: README.md
docs/how-to/: contribute.md  (+20 more)
scripts/: chinese_retrieval_deployment_proof.py  chinese_retrieval_measurement.py  cjk_active_scan_demo.py  cjk_active_scan_runtime_deployment_proof.py  compiled_library_export_consumer.py  compiled_library_export_consumer_v2.py  compiled_library_export_proof.py  consumer_source_pack_client.py  consumer_source_pack_proof.py  dense_retrieval_deployment_proof.py  dense_retrieval_measurement.py  direct_audio_dependency_receipt.py  direct_audio_deployment_proof.py  evidence_provenance_proof.py  generate_local_knowledge_fixtures.py  generate_pdf_ocr_phase0_fixtures.py  local_knowledge_proof.py  numeric_retrieval_deployment_proof.py  pdf_intake_smoke.py  pdf_ocr_apple_vision.swift  pdf_ocr_candidate_compatibility.py  pdf_ocr_phase0_consumer.py  release_consumer_smoke.py  release_presentation_audit.py  transcription_deployment_proof.py
tests/: conftest.py  test_bootstrap.py  test_version_identity.py
(+431 files in other folders)
