[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal-knowledge-engine"
version = "0.0.0"
description = "Local-first multimodal Evidence engine"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "iTao-AI" }]
dependencies = []

[project.scripts]
mke = "mke.cli:console_main"

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mke"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
