[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multimodal-knowledge-engine"
version = "0.0.0"
description = "Local-first multimodal Evidence engine"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "iTao-AI" }]
dependencies = [
  "mcp>=1.28.1,<2",
  "pymupdf>=1.24.0,<2",
]

[project.optional-dependencies]
embedding = [
  "sentence-transformers==5.6.0",
  "sqlite-vec==0.1.9",
  "huggingface-hub>=1.21.0,<2",
]
transcription = [
  "faster-whisper>=1.2.1,<2",
  "av>=11,<18",
  "huggingface-hub>=1.21.0,<2",
]

[project.scripts]
mke = "mke.cli:console_main"
mke-transcribe-faster-whisper = "mke.adapters.video.faster_whisper_cli:console_main"

[dependency-groups]
dev = [
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mke"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
